--- a/sass/templates/_about-us.sass
+++ b/sass/templates/_about-us.sass
@@ -13,7 +13,7 @@
     line-height: 150%
     font-size: 16px
     &:last-of-type
-      margin-bottom: 30px
+      // margin-bottom: 30px
   &__info
     &-list
       list-style: none
@@ -28,6 +28,8 @@
       display: flex
       align-items: center
       margin-bottom: 20px
+      font-weight: 600
+      // color: $primary-dark
     &-icon
       height: 50px
       margin-right: 20px
