added smooth scroll and ids to sections

--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ html {
   background-color: #ffffff;
   color: #333333;
   font-family: 'Montserrat', sans-serif;
+  scroll-behavior: smooth;
 }
 
 img {
