--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -8,6 +8,7 @@ html
   background-color: $light
   color: $dark-text
   font-family: 'Montserrat', sans-serif
+  scroll-behavior: smooth
 img
   max-width: 100%
 .container
