--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,7 @@
 @import 'settings'
 
 @import 'swiper-bundle'
+@import 'templates/tabs'
 
 @import 'templates/header'
 @import 'templates/hero'
@@ -11,6 +12,7 @@
 @import 'templates/delivery'
 @import 'templates/reviews'
 @import 'templates/contact-us'
+@import 'templates/cakes'
 
   
   
