--- a/sass/templates/_cakes.sass
+++ b/sass/templates/_cakes.sass
@@ -1,5 +1,10 @@
 .cakes
   &__section-title
+    margin-bottom: 20px
+  &__description
+    max-width: 600px
+    text-align: left
+    // margin: auto
     margin-bottom: 30px
   &__tab
     &-container
@@ -7,3 +12,10 @@
       text-align: center
   &__slider
     height: 100%
+    &-button
+      background-color: transparent
+      border: none
+      &-prev
+        left: 5px
+      &-next
+        right: 5px
