--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,9 @@
 
 @import 'swiper-bundle'
 @import 'templates/tabs'
+@import 'templates/card'
+@import 'templates/form'
+
 
 @import 'templates/header'
 @import 'templates/hero'
@@ -16,7 +19,6 @@
 
   
   
-@import 'templates/form'
 
 
 
