--- a/sass/templates/_card.sass
+++ b/sass/templates/_card.sass
@@ -2,11 +2,12 @@
   display: flex
   flex-direction: column
   align-items: center
-  margin: 0 30px
+  // margin: 0 30px
   padding: 20px
   // border: 1px solid $primary
   background: $primary-light
   border-radius: 20px
+  height: 460px
   &__image
     max-height: 250px
     width: 100%
