--- a/css/style.css
+++ b/css/style.css
@@ -1215,6 +1215,11 @@ button.swiper-pagination-bullet {
   margin-bottom: 20px;
 }
 
+.card__image-link {
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+}
+
 .card__title {
   text-transform: uppercase;
   margin: 0;
