--- a/sass/templates/_card.sass
+++ b/sass/templates/_card.sass
@@ -14,6 +14,8 @@
     object-fit: cover
     border-radius: 5px
     margin-bottom: 20px
+    &-link
+      cursor: zoom-in
   &__title
     text-transform: uppercase
     margin: 0
