--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -95,6 +95,11 @@
     &:hover
       color: $primary-dark
       border-color: $primary-dark
+  .macaroon
+    &__photo
+      &:hover
+        transition: all 1.5s
+        transform: scale(1.2)
 @media screen and ( max-width: 767px )
   .section-title
     font-size: 36px
