--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,11 +11,12 @@
 @import 'templates/header'
 @import 'templates/hero'
 @import 'templates/about-us'
+@import 'templates/cakes'
+@import 'templates/macaroon'
 
 @import 'templates/delivery'
 @import 'templates/reviews'
 @import 'templates/contact-us'
-@import 'templates/cakes'
 
   
   
