--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,26 @@
+@media screen and ( min-width: 992px )
+  .header
+    &-nav
+      &__link
+        &:hover
+          border-bottom: 2px solid $primary
+          // transition: all 1s
+  .contacts
+    &-group
+      &__item
+        &:hover
+          color: $primary
+  .button
+    transition: all 0.3s
+    &:hover
+      color: $primary-dark
+      border-color: $primary-dark
+  .macaroon
+    &__photo
+      &:hover
+        transition: all 1.5s
+        transform: scale(1.2)
+  
 @media screen and ( max-width: 1400px )
   .hero
     &__title
@@ -59,6 +82,14 @@
         max-width: 600px
     &__socials
       left: 200px
+  .macaroon
+    &__list
+      &-item
+        font-size: 14px
+    &__photo
+      &-wrap
+        // height: 270px
+        
   .socials
     &-wrapper
     &-icon
@@ -78,28 +109,7 @@
   .contact-us
     &__container
       background-position: center right 30px
-@media screen and ( min-width: 992px )
-  .header
-    &-nav
-      &__link
-        &:hover
-          border-bottom: 2px solid $primary
-          // transition: all 1s
-  .contacts
-    &-group
-      &__item
-        &:hover
-          color: $primary
-  .button
-    transition: all 0.3s
-    &:hover
-      color: $primary-dark
-      border-color: $primary-dark
-  .macaroon
-    &__photo
-      &:hover
-        transition: all 1.5s
-        transform: scale(1.2)
+
 @media screen and ( max-width: 767px )
   .section-title
     font-size: 36px
@@ -146,6 +156,17 @@
     &__text
       &:nth-of-type(n)        
         max-width: 300px
+  .macaroon
+    &__description
+      font-size: 14px
+    &__photo
+      &-container
+        flex-basis: 50%
+      &-wrap
+        flex-basis: 100%
+        max-width: 100%
+        &:nth-child(n+4)
+          display: none
   .delivery
     &__row
       flex-direction: column-reverse
@@ -164,7 +185,7 @@
     &__text
       font-size: 14px
   .contact-us
-    background: linear-gradient(to left, rgba($primary-light, 0.5), rgba($primary-light, 1)), url("../img/contact-us/bg-cake.png") center right 50px / auto 100% no-repeat
+    background: linear-gradient(to left, rgba($primary-light, 0.5), rgba($primary-light, 1)), url("../img/contact-us/bg-cake.png") center right 50px / auto 90% no-repeat
     &__container
       background: none
     // &__socials
@@ -211,6 +232,30 @@
   .cakes
     &__description
       font-size: 14px
+  .macaroon
+    &__row
+      flex-direction: column-reverse
+    &__photo
+      &-container
+        margin-bottom: 30px
+      &-wrap
+        flex-basis: 50%
+        &:nth-child(n+4)
+          display: block
+        &:nth-child(n+5)
+          display: none 
+    &__list
+      display: flex
+      flex-direction: column
+      flex-wrap: wrap
+      max-height: 350px
+      // width: 100%
+      &-wrap
+        flex-basis: auto
+        width: 100%
+      &-item
+        // width: 250px
+        max-width: 170px
 @media screen and ( max-width: 460px )
   .section-title
     font-size: 28px
@@ -258,5 +303,10 @@
   .cakes
     &__card
       margin: 0
-
+  .macaroon
+    &__list
+      max-height: 320px
+      &-item
+        font-size: 12px
+        max-width: 150px
   
