--- a/sass/templates/_macaroon.sass
+++ b/sass/templates/_macaroon.sass
@@ -10,21 +10,25 @@
   &__list
     list-style: none
     padding: 0
+    &-wrap
+      flex-basis: 38%
   &__photo
     object-fit: cover
     // height: 100%
     // width: 100%
     // max-width: 285px
     // max-height: 285px
-
     &-container
       flex-basis: 60%
       display: flex
       flex-wrap: wrap
       border-radius: 10px
       overflow: hidden
+      // max-height: 750px
     &-wrap
       overflow: hidden
       display: flex
       max-width: 50%
       max-height: 250px
+      // height: 33%
+      // width: 50%
