--- a/sass/templates/_card.sass
+++ b/sass/templates/_card.sass
@@ -8,6 +8,7 @@
   background: $primary-light
   border-radius: 20px
   height: 460px
+  box-shadow: 0px 5px 10px rgba($primary, 0.2)
   &__image
     max-height: 250px
     width: 100%
