modal added, js for modal added

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -34,6 +34,7 @@ img
   background-color: $primary-light
   text-transform: uppercase
   cursor: pointer
+  box-shadow: 2px 2px 5px rgba($primary-dark, 0.5)
 .socials
   &-wrapper
     display: flex
