--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,8 @@ img {
   background-color: #f2fdff;
   text-transform: uppercase;
   cursor: pointer;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 98, 118, 0.5);
+          box-shadow: 2px 2px 5px rgba(0, 98, 118, 0.5);
 }
 
 .socials-wrapper {
@@ -1217,6 +1219,8 @@ button.swiper-pagination-bullet {
   background: #f2fdff;
   border-radius: 20px;
   height: 460px;
+  -webkit-box-shadow: 0px 5px 10px rgba(0, 161, 194, 0.2);
+          box-shadow: 0px 5px 10px rgba(0, 161, 194, 0.2);
 }
 
 .card__image {
@@ -1843,6 +1847,61 @@ button.swiper-pagination-bullet {
 
 .contact-us__socials-icon {
   margin-top: 10px;
+}
+
+.modal {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 90;
+  background-color: rgba(0, 98, 118, 0.6);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal--active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__window {
+  position: relative;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 91;
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 10px;
+  border: 3px solid #006276;
+  -webkit-box-shadow: 5px 5px 20px rgba(0, 98, 118, 0.5);
+          box-shadow: 5px 5px 20px rgba(0, 98, 118, 0.5);
+}
+
+.modal__window--active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  background: transparent url("../img/close-btn.svg") no-repeat center;
+  border: none;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 992px) {
