--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -309,4 +309,12 @@
       &-item
         font-size: 12px
         max-width: 150px
+  .modal
+    &__window
+      padding: 40px 20px
+      width: 90%
+  .form
+    &__input
+      &-label
+        font-size: 14px
   
