--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -24,6 +24,8 @@
     border-radius: 10px
     border: 2px solid $primary-dark
     box-shadow: 5px 5px 20px rgba($primary-dark, 0.5)
+    overflow: scroll
+    max-height: 100vh
     &--active
       visibility: visible
       opacity: 1
