--- a/css/style.css
+++ b/css/style.css
@@ -1886,6 +1886,8 @@ button.swiper-pagination-bullet {
   border: 2px solid #006276;
   -webkit-box-shadow: 5px 5px 20px rgba(0, 98, 118, 0.5);
           box-shadow: 5px 5px 20px rgba(0, 98, 118, 0.5);
+  overflow: scroll;
+  max-height: 100vh;
 }
 
 .modal__window--active {
@@ -2243,9 +2245,15 @@ button.swiper-pagination-bullet {
   .tab__title:first-of-type {
     padding-left: 0;
   }
+  .hero {
+    padding-bottom: 0;
+  }
   .hero__title {
     font-size: 28px;
     max-width: 300px;
+  }
+  .hero__image {
+    height: calc(100vh - 100px);
   }
   .about-us__row {
     -webkit-box-align: center;
@@ -2298,5 +2306,18 @@ button.swiper-pagination-bullet {
   }
   .form__input-label {
     font-size: 14px;
+  }
+}
+
+@media (max-height: 530px) {
+  .hero {
+    padding: 0;
+  }
+  .hero__title {
+    font-size: 28px;
+    max-width: 300px;
+  }
+  .hero__image {
+    height: calc(100vh - 100px);
   }
 }
