--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -64,4 +64,20 @@ img
       display: inline-block
       width: 18px;
       font-size: 24px
-
+.top-btn
+  visibility: hidden
+  opacity: 0
+  padding: 0
+  background-color: transparent
+  border: none
+  position: fixed
+  bottom: 20px
+  right: 5%
+  z-index: 99
+  cursor: pointer
+  transition: opacity 1s
+  outline: none
+  border-radius: 50%
+  &__icon
+    height: 50px
+    width: 50px
