--- a/sass/templates/_contact-us.sass
+++ b/sass/templates/_contact-us.sass
@@ -10,7 +10,7 @@
     margin-bottom: 40px
   &__socials
     right: 0
-    bottom: 0
+    top: 0
     flex-direction: column
     &-icon
       margin-top: 10px
