--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -363,6 +363,9 @@
     &__input
       &-label
         font-size: 14px
+  .contact-us
+    &__socials
+      top: 50px
   .footer
     &__logo
       width: 150px
