--- a/sass/templates/_reviews.sass
+++ b/sass/templates/_reviews.sass
@@ -4,6 +4,8 @@
     margin-bottom: 30px
     // color: $light
   &__slider
+    padding-right: 2px
+    padding-left: 2px
     &-wrapper
       align-items: stretch
       margin-bottom: 50px
