--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -318,10 +318,10 @@
   .hero
     padding-bottom: 0
     &__title
-      font-size: 28px
-      max-width: 300px
+      font-size: 24px
+      max-width: 260px
     &__image
-      height: calc(100vh - 100px)
+      height: 450px
   .about-us
     &__row
       align-items: center
@@ -381,4 +381,4 @@
       font-size: 28px
       max-width: 300px
     &__image
-      height: calc(100vh - 100px)
+      height: calc(100vh - 120px)
