--- a/sass/templates/_macaroon.sass
+++ b/sass/templates/_macaroon.sass
@@ -14,8 +14,8 @@
       flex-basis: 38%
   &__photo
     object-fit: cover
-    // height: 100%
-    // width: 100%
+    height: 100%
+    width: 100%
     // max-width: 285px
     // max-height: 285px
     &-container
