--- a/sass/templates/_cakes.sass
+++ b/sass/templates/_cakes.sass
@@ -11,7 +11,7 @@
       width: 100%
       text-align: center
   &__slider
-    height: 100%
+    height: 500px
     &-button
       background-color: transparent
       border: none
@@ -19,5 +19,7 @@
         left: 5px
       &-next
         right: 5px
+    &-pagination
+      bottom: 20px
   &__card
     margin: 0 30px
