add dessert section with adaprive

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -94,7 +94,6 @@
     &__photo
       &-wrap
         // height: 270px
-        
   .socials
     &-wrapper
     &-icon
@@ -281,6 +280,9 @@
       &-item
         // width: 250px
         max-width: 170px
+  .dessert
+    &__description
+      font-size: 14px
   .footer
     &__logo
       padding-right: 0
@@ -349,12 +351,31 @@
   .cakes
     &__card
       margin: 0
+    &__slider
+      &-slide
+        padding: 0 8px
+      &-button
+        &-prev
+          left: 10px
+        &-next
+          right: 10px
   .macaroon
     &__list
       max-height: 320px
       &-item
         font-size: 12px
         max-width: 150px
+  .dessert
+    &__card
+      margin: 0
+    &__slider
+      &-slide
+        padding: 0 8px
+      &-button
+        &-prev
+          left: 10px
+        &-next
+          right: 10px
   .modal
     &__window
       padding: 40px 20px
