--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,7 +13,7 @@
 @import 'templates/about-us'
 @import 'templates/cakes'
 @import 'templates/macaroon'
-
+@import 'templates/dessert'
 @import 'templates/delivery'
 @import 'templates/reviews'
 @import 'templates/contact-us'
