--- a/css/style.css
+++ b/css/style.css
@@ -1248,6 +1248,7 @@ button.swiper-pagination-bullet {
 .card__image {
   max-height: 250px;
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5px;
@@ -1257,6 +1258,7 @@ button.swiper-pagination-bullet {
 .card__image-link {
   cursor: -webkit-zoom-in;
   cursor: zoom-in;
+  text-align: center;
 }
 
 .card__title {
@@ -1282,6 +1284,7 @@ button.swiper-pagination-bullet {
   list-style: none;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 .card__list-item {
@@ -1677,6 +1680,41 @@ button.swiper-pagination-bullet {
   display: flex;
   max-width: 50%;
   max-height: 250px;
+}
+
+.dessert__section-title {
+  margin-bottom: 20px;
+}
+
+.dessert__description {
+  max-width: 600px;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.dessert__slider {
+  height: 500px;
+}
+
+.dessert__slider-button {
+  background-color: transparent;
+  border: none;
+}
+
+.dessert__slider-button-prev {
+  left: 5px;
+}
+
+.dessert__slider-button-next {
+  right: 5px;
+}
+
+.dessert__slider-pagination {
+  bottom: 20px;
+}
+
+.dessert__card {
+  margin: 0 30px;
 }
 
 .delivery {
@@ -2397,6 +2435,9 @@ button.swiper-pagination-bullet {
   .macaroon__list-item {
     max-width: 170px;
   }
+  .dessert__description {
+    font-size: 14px;
+  }
   .footer__logo {
     padding-right: 0;
     margin-right: 50px;
@@ -2487,12 +2528,33 @@ button.swiper-pagination-bullet {
   .cakes__card {
     margin: 0;
   }
+  .cakes__slider-slide {
+    padding: 0 8px;
+  }
+  .cakes__slider-button-prev {
+    left: 10px;
+  }
+  .cakes__slider-button-next {
+    right: 10px;
+  }
   .macaroon__list {
     max-height: 320px;
   }
   .macaroon__list-item {
     font-size: 12px;
     max-width: 150px;
+  }
+  .dessert__card {
+    margin: 0;
+  }
+  .dessert__slider-slide {
+    padding: 0 8px;
+  }
+  .dessert__slider-button-prev {
+    left: 10px;
+  }
+  .dessert__slider-button-next {
+    right: 10px;
   }
   .modal__window {
     padding: 40px 20px;
