--- a/sass/templates/_card.sass
+++ b/sass/templates/_card.sass
@@ -9,14 +9,17 @@
   border-radius: 20px
   height: 460px
   box-shadow: 0px 5px 10px rgba($primary, 0.2)
+  // width: 99%
   &__image
     max-height: 250px
     width: 100%
+    height: 100%
     object-fit: cover
     border-radius: 5px
     margin-bottom: 20px
     &-link
       cursor: zoom-in
+      text-align: center
   &__title
     text-transform: uppercase
     margin: 0
@@ -31,5 +34,6 @@
     list-style: none
     padding: 0
     margin: 0
+    text-align: center
     &-item
       font-size: 12px
